@@ -67,7 +67,8 @@
    Tyler, Nathaniel Pryce, Dave Wallace, John Popplewell, Michael Urman
 
      And our bug hunters above and beyond: Angus, Guillaume Proux, Frank
-   Raiser, Austin Henry, Kaweh Kazemi, Arturo Aldama, Mike Mulcheck
+   Raiser, Austin Henry, Kaweh Kazemi, Arturo Aldama, Mike Mulcheck, Rene
+   Dudfield
 
    There's many more folks out there who've submitted helpful ideas, kept
    this project going, and basically made my life easer, Thanks!
